Fix issue with precedence of % operator